# ising-converter

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DWAVE_COMPARISON.md
python/ising_lab/: __init__.py  benchmarks.py  dimod_adapter.py  inference.py  problems.py  qubo.py  registry.py
results/: all_methods_comparison.json  ea_3d_benchmark.csv  ea_3d_benchmark.json  ea_focused_L5_L6.csv  ea_focused_L5_L6.json  houdayer_vs_pt_ea3d.json  loop_bp_free_energy.json  pa_icm_vs_pa_ea3d.json  pa_vs_pticm_degree5_2d.json  pa_vs_pticm_tts_ea3d.json  population_vs_pt_ea3d.json  pt_ktht_vs_baseline.csv  pt_ktht_vs_baseline.json  pt_narrow_vs_wide.csv  pt_narrow_vs_wide.json  pt_tuned_vs_baseline.csv  pt_tuned_vs_baseline.json  sk_n500.csv  sk_n500.json  sk_neal_vs_ising_lab.csv  sk_neal_vs_ising_lab.json  sk_parisi_convergence.json  sk_registry.json  tts_scaling_ea3d.json
scripts/: bench_all_methods.py  bench_degree5_2d.py  bench_ea.py  bench_ea_focused.py  bench_houdayer.py  bench_loop_bp.py  bench_n500.py  bench_neal.py  bench_pa_icm.py  bench_population.py  bench_pt_ktht.py  bench_pt_tuned.py  bench_tts_scaling.py
src/: lib.rs
tests/: test_auto_tune.py  test_basic.py  test_belief_propagation.py  test_benchmarks.py  test_diagnostics_and_registry.py  test_dimod_adapter.py  test_ea.py  test_export.py  test_houdayer.py  test_population_annealing.py
